 - discover-sequence-variants somatic output: Add an error message when a sample is mispelled in the covariates
   file.
 - Refactor code base to keep base counts for forward and reverse strands separately in SampleCountInfo.
 - Normalize somatic priority score by number of mapped reads, and number of parents and germline samples used in
   the calculation.
2.3.2
 - run-parallel-mode now supports paired input files.
 - fasta-to-compact: add --force-quality-encoding option to force the quality values within the specified
   encoding range.
 - suggest-position-slices: fix problem where first slice of genome was omitted from output (with new split
   by number of bytes option introduced in 2.3).
2.3.1
 - Fix for https://github.com/CampagneLaboratory/goby/issues/3
 - Upgrade commons-io and dsiutils to latest jar versions. Log messages when scanning reads file with cfs mode.
 - DistinctValueCounterBitSet: now grows to biggest size at construction time.
 - Fixed a performance problem. When reading large reads file (>10GB), performance of ReadsReader would degrade
   over time. This was due to caching of data in static protobuf methods of ReadCollection. We now create a
   builder instance that gets garbage collected when it is no longer used. This fixes a subtle performance
   problem. The same fix has been applied to alignment readers.
2.3
 - concatenate-alignments mode: add ability to restrict output to a genomic slice (see -s and -e options).
 - API change: AlignmentSliceHelper makes it easier to parse and process genomic slices for sets of alignments.
 - concatenate-alignments mode: now transfers read groups to output in the same way that non-sorted concat does.
 - concatenate-alignments mode: Add a mechanism to override/define read groups/read origin info on the fly when
   reading alignments that did not include them. Coupled with changes to compact-to-sam, this makes it possible
   to get BAM files with read groups directly from Goby alignments.